    tspemaj doesn't exist, default_tablespace is used.
  - improve the error message returned by emaj_rename_mark_group() if the 
    supplied new mark name is NULL.
  - during rollbacks, avoid to drop and recreate foreign keys belonging to 
    impacted tables but referencing tables that are not involved in the 
    rollback operation.
  - minor internal improvements in rollback operations management.

Bug fixes:
  - fix an incorrect state for marks generated at stop_group(s) time. Being 
    previously left as ACTIVE after the emaj_stop_group() or 
    emaj_stop_groups() functions calls, a rollback to this mark after a 
    restart of the group led to sequence values corruption.
  - indexes of technical emaj tables are now also located on tspemaj 
    tablespace (if exists)
  - fix a SQL injection hole in 2 functions by testing more carefuly supplied 
    parameters.

0.11.0
------
Enhancements:
  - add an optional "resetLog" boolean parameter to the emaj_start_group() 
    and emaj_start_groups() functions, indicating if the old log records must 
    be physicaly deleted or not. By default, or when this third parameter is 
    set to true, old log records of a group are deleted (i.e. the group is 
    reset) at start group time. If the group is not reset at start time, all 
    old related marks and log tables rows cannot be used for any rollback 
    operation anymore. Nevertheless, log rows remain visible, old marks can 
    be deleted, renamed or commented, and log statistics can be requested.
  - now that logs may survive to a group start, a mark is automaticaly set 
    at group stop time so that this operation is clearly visible in the marks 
    list; This mark is named STOP_xxx where this suffix represents the time 
    of the day.
  - the emaj_rollback_and_stop_group() and emaj_rollback_and_stop_groups()
    functions are suppressed. They were not really useful and they left 
    inconsistent data in log tables, which may lead to trouble now that 